# backend/src/routes/reagenteRouter.js
@@ -10,14 +10,16 @@ import {
     listNamesAndCodes,
     addToStock,
     removeStock,
+    createExcel,
 } from '../controllers/reagenteController.js';
 
 import validator from '../middlewares/validator.js';
 import schema from './validators/reagenteValidator.js';
 
 const router = Router();
-router.get('/forms', listNamesAndCodes);
 router.get('/', listReagentes);
+router.get('/forms', listNamesAndCodes);
+router.get('/excel', createExcel);
 router.get('/:_id', getReagente);
 router.post('/', validator(schema), createReagente);;
 router.put('/:_id', validator(schema), updateReagente);
